add basic gallery support

--- a/workspace/public/modules/core/views/home.client.view.html
+++ b/workspace/public/modules/core/views/home.client.view.html
@@ -11,4 +11,9 @@
 		<p>Link to your Selfie: </p>
 		<input type='text' value="{{link}}" id='link' class='form-control'/>
 	</div>
+	<div id='gallery'>
+		<ul>
+			<li data-ng-repeat="selfie in selfies"><img src={{selfie.dataUri}} alt=''/></li>
+		</ul>
+	</div>
 </section>
