--- a/workspace/public/modules/core/css/core.css
+++ b/workspace/public/modules/core/css/core.css
@@ -36,3 +36,11 @@
 	width: 420px;
 	margin: 0 auto;
 }
+#gallery ul{
+	margin-top: 20px;
+	text-align: center;
+}
+#gallery ul li{
+	display: inline-block;
+	margin: 5px;
+}
