--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -45,11 +45,12 @@
 
 <body class="ng-cloak">
 	<!--<header data-ng-include="'/modules/core/views/header.client.view.html'" class="navbar navbar-fixed-top navbar-inverse"></header>-->
-	<section class="content">
-		<section class="container">
-			{% block content %}{% endblock %}
-		</section>
-	</section>
+	{% block content %}{% endblock %}
+	<!--<section class="content">-->
+	<!--	<section class="container">-->
+			
+	<!--	</section>-->
+	<!--</section>-->
 
 	<!--Embedding The User Object-->
 	<script type="text/javascript">
@@ -61,7 +62,7 @@
 
 	{% if process.env.NODE_ENV === 'development' %}
 	<!--Livereload script rendered -->
-	<script type="text/javascript" src="http://{{request.hostname}}:35729/livereload.js"></script>
+	<!--<script type="text/javascript" src="http://{{request.hostname}}:35729/livereload.js"></script>-->
 	{% endif %}
 </body>
 
