--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -1,46 +1,119 @@
-.content {
-	margin-top: 50px;
+html,
+body {
+	height: 100%;
+	margin: 0;
+	padding: 0;
 }
+
+body {
+	display: flex;
+	flex-direction: column;
+}
+
+section {
+	display: flex;
+	flex: 1;
+}
+
+#homeController {
+	flex-direction: row;
+}
+
+#homeController .col1 {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+}
+
+#homeController .col2 {
+	flex: 1;
+	display: flex;
+	align-items: center;
+	align-content: center;
+	justify-content: center;
+	flex-direction: column;
+}
+
+#menu {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	align-content: center;
+	justify-content: center;
+}
+
+#snapArea {
+	display: flex;
+	flex: 1;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	align-content: center;
+}
+
 .undecorated-link:hover {
 	text-decoration: none;
 }
-[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+
+[ng\:cloak],
+[ng-cloak],
+[data-ng-cloak],
+[x-ng-cloak],
+.ng-cloak,
+.x-ng-cloak {
 	display: none !important;
 }
+
 .ng-invalid.ng-dirty {
 	border-color: #FA787E;
 }
+
 .ng-valid.ng-dirty {
 	border-color: #78FA89;
 }
 
-#videoCapture{
+#videoCapture {
 	margin: 0 auto;
 }
-#picturePreview{
+
+#picturePreview {
 	margin: 0 auto;
 	text-align: center;
 }
-#btnContainer{
+
+#btnContainer {
 	text-align: center;
 	margin-top: 20px;
 }
-#snapBtn{}
+
+#snapBtn {}
+
+
 /*#deleteBtn{display: none;}*/
+
+
 /*#saveBtn{display: none;}*/
-#linkContainer{
+
+#linkContainer {
 	text-align: center;
 	margin-top: 20px;
 }
-#link{
+
+#link {
 	width: 420px;
 	margin: 0 auto;
 }
-#gallery ul{
-	margin-top: 20px;
+
+#gallery {
 	text-align: center;
+	overflow: auto;
+	flex: 1 1 0;
+	padding: 0px;
+	margin: 20px 0;
+	list-style-type: none;
 }
-#gallery ul li{
+
+#gallery li {
 	display: inline-block;
-	margin: 5px;
+	margin: 0px 10px 10px 10px;
 }
